// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders properly 1`] = `
<div>
  <div
    className="select-value-text"
  />
  <div
    className="select-btn-open"
    onClick={[Function]}
  >
    Select button
  </div>
</div>
`;

exports[`Select value text should display provided value 1`] = `
<div
  className="select-value-text"
>
  testValue
</div>
`;
